--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <footer>
-            <p>&copy; 2022 San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+            <p>&copy; 4/8/2025 Jacob Pazmino San Joaquin Valley Town Hall, Fresno, CA 93755</p>
         </footer>
     </div>
 
